--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:configChanges="orientation|screenSize"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,6 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Vožyk"
         tools:targetApi="31">
+        <activity
+            android:name=".Registration"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -36,6 +43,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".Login"
+            android:exported="true"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
