--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
+    }
 
 }
 
