--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:configChanges="orientation|screenSize"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/voz"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/voz"
         android:supportsRtl="true"
         android:theme="@style/Theme.Vožyk"
         tools:targetApi="31">
@@ -50,12 +50,8 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".More"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:name=".ui.notifications.NotificationsPills"
+            android:exported="false" />
         <activity
             android:name=".Registration"
             android:exported="false">
@@ -65,8 +61,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -79,8 +74,13 @@
         </activity>
         <activity
             android:name=".Login"
-            android:exported="true"
-            android:label="@string/app_name" />
+            android:exported="true" />
+        <activity
+            android:name=".ui.habits.NewHabitActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.habits.Habits"
+            android:exported="true" />
     </application>
 
 </manifest>
