--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.core:core:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'com.google.firebase:firebase-core'
