--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace 'com.application.vozyk'
@@ -82,5 +83,7 @@ dependencies {
     implementation "com.github.skydoves:colorpickerview:2.2.3"
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.joaomgcd:taskerpluginlibrary:0.4.4'
+
 
 }
