--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
-    implementation "com.android.billingclient:billing:5.0.0"
+    implementation "com.android.billingclient:billing:5.1.0"
     implementation 'com.google.firebase:firebase-functions'
     implementation 'nl.dionsegijn:konfetti:1.3.2'
     implementation "androidx.room:room-runtime:2.4.3"
@@ -84,6 +84,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.joaomgcd:taskerpluginlibrary:0.4.4'
-
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.0'
 }
