--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.14.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
 }
