--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,20 +23,6 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".Add_new_pills"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".UpdateMedication"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".About_us"
             android:exported="false">
             <meta-data
@@ -77,6 +63,21 @@
             android:name=".Login"
             android:exported="true" />
         <activity
+            android:name=".ui.notifications.HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.notifications.UpdateActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.notifications.TimeChangeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.notifications.AlarmManagerHandler"
+            android:exported="true" />
+        <activity
+            android:name=".ui.notifications.RingActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.habits.NewHabitActivity"
             android:exported="true" />
         <activity
@@ -114,6 +115,18 @@
             android:exported="true" />
         <activity
             android:name=".ui.ocd.ocdResultActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.doctor.DoctorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.doctor.DoctorAddActivity"
+            android:exported="true" />
+        <activity
+            android:name=".lab.labActivity"
+            android:exported="true" />
+        <activity
+            android:name=".lab.labAddActivity"
             android:exported="true" />
         <activity
             android:name=".ui.ptsd.ptsdActivity"
