--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/voz"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Vožyk"
-        >
+        android:theme="@style/Theme.Vožyk">
 
         <activity
             android:name=".About_us"
