--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,14 @@
         android:theme="@style/Theme.Vožyk">
 
         <activity
-            android:name=".About_us"
+            android:name=".ui.about.About_us"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Account"
+            android:name=".ui.account.Account"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -44,7 +44,7 @@
             android:name=".ui.notifications.NotificationsPills"
             android:exported="false" />
         <activity
-            android:name=".Registration"
+            android:name=".ui.login.Registration"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -64,7 +64,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Login"
+            android:name=".ui.login.Login"
             android:exported="true" />
         <activity
             android:name=".ui.notifications.HomeActivity"
